--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Enigmatis/polaris-delta-middleware#readme",
   "dependencies": {
+    "graphql": "^14.5.4",
     "graphql-middleware": "^4.0.1"
   }
 }
