--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,6 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-dist/
 
 # TypeScript v1 declaration files
 typings/
@@ -60,3 +59,4 @@ typings/
 
 # next.js build output
 .next
+/dist/
