--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "handling delta in polaris",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register ./data-version/data-version-middleware.test.ts"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,17 @@
   },
   "homepage": "https://github.com/Enigmatis/polaris-delta-middleware#readme",
   "dependencies": {
+    "@types/node": "^12.7.4",
     "graphql": "^14.5.4",
     "graphql-middleware": "^4.0.1"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.1",
+    "@types/mocha": "^5.2.7",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.6.2",
+    "typings": "^2.1.1"
   }
 }
