--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "handling delta in polaris",
   "main": "index.ts",
   "scripts": {
-    "test": "mocha -r ts-node/register ./data-version/data-version-middleware.test.ts"
+    "test": "mocha -r ts-node/register **/*.test.ts"
   },
   "repository": {
     "type": "git",
