--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "polaris-delta-middleware",
+  "name": "@enigmatis/polaris-delta-middleware",
   "version": "1.0.0",
   "description": "handling delta in polaris",
   "main": "index.ts",
