--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Enigmatis/polaris-delta-middleware#readme",
   "dependencies": {
     "@types/node": "^12.7.4",
+    "apollo-server-plugin-base": "^0.6.4",
     "graphql": "^14.5.4",
     "graphql-extensions": "^0.10.3",
     "graphql-middleware": "^4.0.1"
