--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "homepage": "https://github.com/Enigmatis/polaris-delta-middleware#readme",
   "dependencies": {
-    "@types/node": "^12.7.4",
     "@types/sinon": "^7.0.13",
     "@types/sinon-chai": "^3.2.3",
     "apollo-server-plugin-base": "^0.6.4",
@@ -33,6 +32,7 @@
     "sinon-chai": "^3.3.0"
   },
   "devDependencies": {
+    "@types/node": "^12.7.4",
     "@types/chai": "^4.2.1",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
@@ -40,5 +40,6 @@
     "ts-node": "^8.3.0",
     "typescript": "^3.6.2",
     "typings": "^2.1.1"
-  }
+  },
+  "peerDependencies": {}
 }
