--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "resolveJsonModule": true,
     "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true,
-    "types": [ "node", "mocha", "chai" ],
+    "types": [ "mocha", "chai" ],
     "typeRoots": [
       "src/type-declarations"
     ],
@@ -25,5 +25,9 @@
   "exclude": [
     "node_modules",
     "dist"
+  ],
+  "files": [
+    "node_modules/@types/node/index.d.ts"
   ]
+
 }
