--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "src/type-declarations"
     ],
     "types": [
-      "mocha"
+      "jest"
     ],
     "declaration": true,
     "lib": [
