--- a/package.json
+++ b/package.json
@@ -63,29 +63,28 @@
     "apollo-server-plugin-base": "^0.6.4",
     "graphql": "^14.5.4",
     "graphql-extensions": "^0.10.3",
-    "graphql-middleware": "^4.0.1"
+    "graphql-middleware": "^4.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@semantic-release/changelog": "^3.0.5",
     "@semantic-release/git": "^7.0.17",
-    "@types/jest": "^24.0.21",
-    "@types/node": "^12.7.4",
+    "@types/jest": "^24.0.22",
+    "@types/node": "^12.12.6",
     "husky": "^3.0.9",
-    "jest": "^24.1.0",
+    "jest": "24.1.0",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
     "travis-deploy-once": "^5.0.11",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.3.0",
-    "tslint": "^6.0.0-beta0",
+    "tslint": "^6.0.0-beta1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.6.2",
-    "typings": "^2.1.1"
+    "typescript": "^3.7.2"
   },
   "peerDependencies": {},
   "husky": {
