--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
       "src/type-declarations"
     ],
     "types": [
-      "jest"
+      "jest",
+      "node"
     ],
     "declaration": true,
     "lib": [
