--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
   "homepage": "https://github.com/Enigmatis/polaris-middlewares#readme",
   "dependencies": {
     "@enigmatis/polaris-common": "^1.0.5",
+    "@enigmatis/polaris-typeorm": "^1.1.1",
+    "@enigmatis/polaris-graphql-logger": "^1.0.3",
     "apollo-server-plugin-base": "^0.6.4",
     "graphql": "^14.5.4",
     "graphql-extensions": "^0.10.3",
