fix: fixed irrelevant entities tests

--- a/package.json
+++ b/package.json
@@ -59,35 +59,32 @@
   },
   "homepage": "https://github.com/Enigmatis/polaris-middlewares#readme",
   "dependencies": {
-    "@enigmatis/polaris-common": "^1.0.5",
-    "@enigmatis/polaris-graphql-logger": "^1.0.3",
-    "@enigmatis/polaris-typeorm": "^1.1.1",
-    "apollo-server-plugin-base": "^0.6.4",
-    "graphql": "^14.5.4",
+    "@enigmatis/polaris-common": "^1.0.9",
+    "@enigmatis/polaris-graphql-logger": "^1.1.0",
+    "@enigmatis/polaris-typeorm": "^1.1.4",
+    "apollo-server-plugin-base": "^0.6.8",
+    "graphql": "^14.5.8",
     "graphql-extensions": "^0.10.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
-    "@semantic-release/changelog": "^3.0.5",
-    "@semantic-release/git": "^7.0.17",
-    "@types/jest": "^24.0.22",
-    "@types/node": "^12.12.7",
-    "husky": "^3.0.9",
+    "@semantic-release/changelog": "^3.0.6",
+    "@semantic-release/git": "^7.0.18",
+    "@types/jest": "^24.0.23",
+    "husky": "^3.1.0",
     "jest": "24.1.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
     "travis-deploy-once": "^5.0.11",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.3.0",
-    "tslint": "^6.0.0-beta1",
+    "ts-jest": "^24.2.0",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.7.2"
   },
-  "peerDependencies": {},
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
