--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "@semantic-release/git": "^7.0.18",
     "@types/jest": "^24.0.23",
     "husky": "^3.1.0",
-    "jest": "24.1.0",
+    "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
     "travis-deploy-once": "^5.0.11",
