--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "lint:fix": "npm run tslint-check && tslint -p . --fix",
     "test": "jest --runInBand",
-    "build": "rimraf dist && tsc -p tsconfig.json",
+    "build": "rimraf dist && tsc -p tsconfig.json && npm run lint:fix",
     "semantic-release": "semantic-release",
-    "travis-deploy-once": "travis-deploy-once",
-    "prepare": "npm run lint:fix && npm run build"
+    "travis-deploy-once": "travis-deploy-once"
   },
   "publishConfig": {
     "access": "public"
@@ -59,14 +58,22 @@
   },
   "homepage": "https://github.com/Enigmatis/polaris-middlewares#readme",
   "dependencies": {
+    "graphql-extensions": "^0.10.3"
+  },
+  "peerDependencies": {
+    "@enigmatis/polaris-common": "^1.0.9",
+    "@enigmatis/polaris-graphql-logger": "^1.1.0",
+    "@enigmatis/polaris-typeorm": "^1.1.11",
+    "apollo-server-plugin-base": "^0.6.8",
+    "graphql": "^14.5.8"
+  },
+  "devDependencies": {
     "@enigmatis/polaris-common": "^1.0.9",
     "@enigmatis/polaris-graphql-logger": "^1.1.0",
     "@enigmatis/polaris-typeorm": "^1.1.11",
     "apollo-server-plugin-base": "^0.6.8",
     "graphql": "^14.5.8",
-    "graphql-extensions": "^0.10.3"
-  },
-  "devDependencies": {
+    "graphql-extensions": "^0.10.3",
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@semantic-release/changelog": "^3.0.6",
