--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@semantic-release/changelog": "^3.0.6",
-    "@semantic-release/git": "^7.0.18",
+    "@semantic-release/git": "latest",
     "@types/jest": "^24.0.23",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
