--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: node_js
 
+os: linux
+
 node_js:
-  - 10
-  - 8
+    - 12
 
 jobs:
-  include:
-    # Define the release stage that runs semantic-release
-    - stage: release
-      node_js: lts/*
-      # Advanced: optionally overwrite your default `script` step to skip the tests
-      # script: skip
-      deploy:
-        provider: script
-        skip_cleanup: true
-        script:
-          - npx semantic-release
+    include:
+        # Define the release stage that runs semantic-release
+        - stage: release
+          node_js: lts/*
+          # Advanced: optionally overwrite your default `script` step to skip the tests
+          # script: skip
+          deploy:
+              provider: script
+              skip_cleanup: true
+              script: npx semantic-release
