fix: upgrade typeorm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "resolveJsonModule": true,
     "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
     "types": [
       "jest"
     ],
