--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,19 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2017",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "strict": true,
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "emitDecoratorMetadata": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-    "types": [
-      "jest"
-    ],
-    "declaration": true,
-    "lib": [
-      "es6",
-      "es2017",
-      "esnext",
-      "dom"
-    ]
-  },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+    "compilerOptions": {
+        "module": "commonjs",
+        "target": "es2017",
+        "sourceMap": true,
+        "outDir": "./dist",
+        "strict": true,
+        "moduleResolution": "node",
+        "experimentalDecorators": true,
+        "resolveJsonModule": true,
+        "emitDecoratorMetadata": true,
+        "allowSyntheticDefaultImports": true,
+        "skipLibCheck": true,
+        "types": ["jest"],
+        "declaration": true,
+        "lib": ["es6", "es2017", "esnext", "dom"]
+    },
+    "exclude": ["node_modules", "dist"]
 }
